--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,12 +1,72 @@
 body {
-    font-family: 'Space Mono', monospace;
-    cursor: url('./assets/pointcursorwhite.png'), auto;
-    background-color: #fec5e5;
+    cursor: url('../../assets/arrowcursor.png'), auto;
+    background-color: #fff;
+    font-family: 'Source Sans Pro', sans-serif;
+    
+    color:#2d2d2b;
+    
+    
 }
 
-.box {
-    border: 1px solid;
-  padding: 10px;
-  
-  background-color: white;
+.navbar {
+    font-family: 'Inter', sans-serif;
+    background-color: #c4c4c4;
+    border-bottom: 4px solid #2d2d2b;
+    padding-top: 12px;
+    padding-bottom: 10px;
+
 }
+
+.nav-link {
+    color: #2d2d2b;
+}
+
+
+
+.main-img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    border: 4px solid #2d2d2b;
+    box-shadow: 15px 15px #2d2d2b;
+    
+}
+
+.title-pad {
+    padding-top: 170px;
+}
+
+.title {
+   
+    font-family: 'Inter', sans-serif;
+
+}
+
+.card-cont {
+    padding-bottom: 50px;
+}
+
+.card {
+    border: 4px solid #2d2d2b;
+    box-shadow: 15px 15px #2d2d2b;
+    background-color: light gray;
+
+}
+
+.card-title {
+    font-family: 'Inter', sans-serif;
+
+}
+
+.btn {
+    background-color: #2d2d2b;
+    color: #fff;
+}
+
+.footer {
+    font-family: 'Inter', sans-serif;
+    background-color: #c4c4c4;
+    border-top: 4px solid #2d2d2b;
+}
+
+
