--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    cursor: url('../../assets/arrowcursor.png'), auto;
+    cursor: url('../../assets/cursor-pixel.png'), auto;
     background-color: #fff;
     font-family: 'Source Sans Pro', sans-serif;
     
@@ -8,7 +8,7 @@ body {
     
 }
 
-.navbar {
+.nav {
     font-family: 'Inter', sans-serif;
     background-color: #c4c4c4;
     border-bottom: 4px solid #2d2d2b;
@@ -18,6 +18,11 @@ body {
 }
 
 .nav-link {
+    color: #2d2d2b;
+
+}
+
+.nav-link:hover {
     color: #2d2d2b;
 }
 
@@ -61,6 +66,10 @@ body {
 .btn {
     background-color: #2d2d2b;
     color: #fff;
+}
+
+.sub-title-pad {
+    padding-top: 50px;
 }
 
 .footer {
