--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,112 +1,72 @@
 body {
-    cursor: url('../../assets/cursor-pixel.png'), auto;
-    background-color: #fff;
-    font-family: 'Source Sans Pro', sans-serif;
-    color:#2d2d2b;
+    background-color: #e2e2e2;
+    color: #2d2d2b;
+
 }
 
-
-/* nav bar */
-.nav {
-    font-family: 'Inter', sans-serif;
-    background-color: #c4c4c4;
-    border-bottom: 4px solid #2d2d2b;
-    padding-top: 12px;
-    padding-bottom: 10px;
+.navbar {
+    background-color: #e2e2e2;
 }
 
 .nav-link {
-    color: #2d2d2b;
+    color: #2d2d2b !important;
 }
 
 .nav-link:hover {
-    color: #fff;
-    cursor: url('../../assets/cursor-pixel.png'), auto;
+    color:#6f7f88 !important;
 }
 
-/* about */
-.title {
-    font-family: 'Inter', sans-serif;
+.display-4 {
+    padding-top: 200px;
 }
 
-.title-pad {
-    padding-top: 170px;
+.bold {
+    font-weight: 700;
 }
 
-/* about image */
-.img-pad {
-    padding-top:125px;
-}
-.main-img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    border: 4px solid #2d2d2b;
-    box-shadow: 15px 15px #2d2d2b;
-}
-
-/* socials */
-.social-links {
-    color: #2d2d2b;
-}
-
-.social-links:hover {
-    color:#c4c4c4;
-    cursor: url('../../assets/cursor-pixel.png'), auto;
-}
-
-
-/* projects */
-.card-cont {
-    padding-bottom: 50px;
-}
-
-.card {
-    border: 4px solid #2d2d2b;
-    box-shadow: 15px 15px #2d2d2b;
-    background-color: light gray;
-
-}
-
-.card-title {
-    font-family: 'Inter', sans-serif;
-
+.italic {
+    font-family: 'Libre Baskerville', serif;
 }
 
 .btn {
-    background-color: #2d2d2b;
-    color:#fff;
+    border-radius: 50%;
 }
 
-.btn:hover {
-    color: #c4c4c4;
-    cursor: url('../../assets/cursor-pixel.png'), auto;
+.sub-title {
+    padding-top: 100px;
 }
 
-.sub-title-pad {
-    padding-top: 50px;
+.main-img {
+    padding-top: 170px;
+    -ms-transform: rotate(3deg); /* IE 9 */
+  transform: rotate(3deg);
+  object-fit: contain;
 }
 
-/* email */
-.email-link {
+.project-img {
+    object-fit: contain;
+}
+
+.underline {
+    text-decoration: underline;
+}
+
+
+.contact-link {
     color:#2d2d2b;
+    text-decoration: none;
 }
 
-.email-link:hover {
-    color: #c4c4c4;
-    cursor: url('../../assets/cursor-pixel.png'), auto;
+.contact-link:hover {
+    color: #6f7f88;
 }
 
-
-/* footer */
-.footer {
-    font-family: 'Inter', sans-serif;
-    background-color: #c4c4c4;
-    border-top: 4px solid #2d2d2b;
+.project-links {
+    color:#2d2d2b;
+    text-decoration: none;
 }
 
-.happy-comp:hover {
-    cursor: url('../../assets/cursor-pixel.png'), auto;
+.project-links:hover {
+    color: #6f7f88;
+
 }
-
-
